# drone_eye_ws

./: .gitignore
.devcontainer/: Dockerfile  devcontainer.json
src/: requirements.txt
src/drone_eye_detector/: package.xml  setup.cfg  setup.py
src/drone_eye_detector/drone_eye_detector/: detector.py  detector_node.py  painter.py
src/drone_eye_msgs/: CMakeLists.txt  package.xml
src/drone_eye_msgs/msg/: BoundingBox.msg  TrackingArray.msg  TrackingInfo.msg
src/drone_eye_navigation/: CMakeLists.txt  package.xml
src/drone_eye_navigation/src/: orbslam3_node.cpp
src/drone_eye_server/: package.xml  setup.cfg  setup.py
src/drone_eye_server/drone_eye_server/: server.py  server_node.py
src/drone_eye_server/drone_eye_server/static/: index.html
src/drone_eye_server/launch/: drone_eye_bringup.launch.py
src/drone_eye_tracker/: package.xml  setup.cfg  setup.py
src/drone_eye_tracker/drone_eye_tracker/: tracker.py  tracker_node.py
src/drone_eye_video_processor/: package.xml  setup.cfg  setup.py
src/drone_eye_video_processor/drone_eye_video_processor/: socket_server.py  video_processor.py
src/drone_eye_video_processor/drone_eye_video_processor/static/: index.html
src/drone_eye_visualizer/: package.xml  setup.cfg  setup.py
src/drone_eye_visualizer/drone_eye_visualizer/: painter.py  visualizer_node.py
